<resources>
    <string name="app_name">Black Jack</string>
    <string name="stand">Stand</string>
    <string name="double_down">Double Down</string>
    <string name="split">Split</string>
    <string name="hit">Hit</string>
    <string name="test">Test</string>
    <string name="setting_name">Setting</string>
    <string name="setting1">Probability</string>
    <string name="setting2">Setting 2</string>
    <string name="setting3">Setting 3</string>
    <string name="setting4">Setting 4</string>
    <string name="setting5">Setting 5</string>

    <string name="player_count">0</string>
    <string name="start">START</string>
    <string name="dealer_count" />

    <string name="stats">Stats</string>
    <string name="games">Hand Number: </string>
    <string name="record">Record (W-L-T): </string>
    <string name="busts">Times Busted: </string>
    <string name="num21">Blackjacks: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redeal">Redeal</string>

    <string name="todo">TODO</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Probability">Probability</string>

    <string name="reshuffle">Shuffle Deck</string>

</resources>
