<?xml version="1.0" encoding="utf-8"?><!DOCTYPE androidx.constraintlayout.widget.ConstraintLayout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/felt_background">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="Restart"
        android:background="@drawable/gold_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/buttonHit"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:text="@string/hit"
        android:background="@drawable/gold_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStand"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStand"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:text="@string/stand"
        android:background="@drawable/gold_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDD"
        app:layout_constraintStart_toEndOf="@+id/buttonHit" />

    <Button
        android:id="@+id/buttonDD"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/double_down"
        android:background="@drawable/gold_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSplit"
        app:layout_constraintStart_toEndOf="@+id/buttonStand" />

    <Button
        android:id="@+id/buttonSplit"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:text="@string/split"
        android:background="@drawable/gold_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDD" />

    <ImageButton
        android:id="@+id/gameShoeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shoe"
        app:layout_constraintBottom_toBottomOf="@id/shoeCount"
        app:layout_constraintStart_toEndOf= "@id/dealerFragment"/>

    <ImageButton
        android:id="@+id/imageSettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <ImageButton
        android:id="@+id/imageAnalyzeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/analyze_button" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="@string/start"
        android:background="@drawable/gold_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRedeal"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="@string/redeal"
        android:visibility="gone"
        android:background="@drawable/gold_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReshuffle"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:text="@string/reshuffle"
        android:visibility="gone"
        android:background="@drawable/gold_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.myapplication.PlayerHandFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeCount"/>

    <fragment
        android:id="@+id/dealerFragment"
        android:name="com.example.myapplication.DealerHandFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/shoeCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--
    <fragment
       android:id="@+id/shoFragment"
        android:name="com.example.myapplication.ShoeLeftOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    -->
    <TextView
        android:id="@+id/dealerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dealerFragment" />

    <TextView
        android:id="@+id/playerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/playerFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/analyzeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Count Tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/shoeCount" />

    <TextView
        android:id="@+id/shoeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Shoe Count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/winLossTie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="Win/Loss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeCount" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/dealerPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dealerFragment"
        app:layout_constraintBottom_toTopOf="@id/buttonStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>